# simple-llm-loadtester

./: .gitignore  CLAUDE.md  PHASE3_IMPLEMENTATION.md  PHASE3_SUMMARY.md  PHASE3_TESTING.md  PHASE3_VISUAL_GUIDE.md  README.ko.md  README.md  docker-compose.yml  prd.md  pyproject.toml
.claude/: README.md
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
adapters/: __init__.py  base.py  openai_compat.py  triton.py
api/: IMPLEMENTATION_SUMMARY.md  PHASE4_CHANGELOG.md  pyproject.toml  test_auth.py
api/src/llm_loadtest_api/: __init__.py  auth.py  logging_config.py  main.py
api/src/llm_loadtest_api/models/: __init__.py  schemas.py
api/src/llm_loadtest_api/routers/: __init__.py  benchmarks.py
api/src/llm_loadtest_api/services/: __init__.py  benchmark_service.py
cli/: pyproject.toml
cli/src/llm_loadtest/: __init__.py  main.py
cli/src/llm_loadtest/commands/: __init__.py  info.py  run.py
core/: __init__.py  load_generator.py  metrics.py  models.py
docker/: Dockerfile.api  Dockerfile.web
services/api/: Dockerfile  README.md  test_api_endpoints.sh
services/api/src/llm_loadtest_api/models/: schemas.py
services/api/src/llm_loadtest_api/routers/: benchmarks.py  recommend.py  websocket.py
services/api/src/llm_loadtest_api/services/: benchmark_service.py
services/cli/src/llm_loadtest/commands/: gpu.py  recommend.py
services/web/src/app/: providers.tsx
services/web/src/app/benchmark/[id]/: page.tsx
services/web/src/app/benchmark/[id]/analysis/: page.tsx
services/web/src/app/benchmark/new/: page.tsx
services/web/src/app/compare/: page.tsx
services/web/src/app/recommend/: page.tsx
services/web/src/components/: metric-card.tsx  sidebar.tsx
shared/adapters/: __init__.py
shared/core/: gpu_monitor.py  load_generator.py  metrics.py  models.py
shared/database/: database.py
src/services/api/: .env.example  Dockerfile  pyproject.toml  test_auth.py
src/services/api/src/llm_loadtest_api/: logging_config.py  main.py
src/services/api/src/llm_loadtest_api/models/: schemas.py
src/services/api/src/llm_loadtest_api/routers/: benchmarks.py  websocket.py
src/services/api/src/llm_loadtest_api/services/: benchmark_service.py
src/services/cli/src/llm_loadtest/: main.py
src/services/cli/src/llm_loadtest/commands/: run.py
src/services/web/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
src/services/web/src/app/: page.tsx
src/services/web/src/app/benchmark/[id]/: page.tsx
src/services/web/src/app/benchmark/[id]/analysis/: page.tsx
src/services/web/src/app/benchmark/new/: page.tsx
src/services/web/src/app/compare/: page.tsx
src/services/web/src/app/recommend/: page.tsx
src/services/web/src/components/: RequestLogPanel.tsx  ValidationLogPanel.tsx  sidebar.tsx
src/services/web/src/hooks/: useBenchmarkProgress.ts
src/shared/adapters/: base.py  openai_compat.py  triton.py
src/shared/core/: __init__.py  docker_logs.py  gpu_monitor.py  load_generator.py  models.py  recommend.py  serving_engine_info.py  system_info.py  tokenizer.py  validator.py
src/shared/database/: __init__.py  database.py
tests/: conftest.py
tests/api/: test_api_endpoints.py
tests/integration/: test_recommend.py
tests/unit/: test_metrics.py  test_models.py  test_tokenizer.py
web/: next.config.mjs  package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/benchmark/[id]/: page.tsx
web/src/app/benchmark/new/: page.tsx
web/src/app/history/: page.tsx
web/src/components/: sidebar.tsx
web/src/hooks/: useBenchmarkProgress.ts
web/src/lib/: api.ts
