[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-loadtest"
version = "0.1.0"
description = "LLM server load testing tool"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "WIGTN", email = "dev@wigtn.ai" }
]
keywords = ["llm", "loadtest", "benchmark", "vllm", "sglang", "inference", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
gpu = [
    "nvidia-ml-py>=12.535.0",
]
all = [
    "llm-loadtest[gpu]",
]

[project.scripts]
llm-loadtest = "llm_loadtest.main:app"

[project.urls]
Homepage = "https://github.com/wigtn/llm-loadtest"
Documentation = "https://github.com/wigtn/llm-loadtest#readme"
Repository = "https://github.com/wigtn/llm-loadtest"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_loadtest"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
